--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,67 @@
-node_modules/
-.env
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Misc
 .DS_Store
-*.log
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.idea/
-.vscode/
-*.sublime-*
-*.code-workspace
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
+.env
+
+# Build files
 build/
-dist/
-coverage/
+
+# Cache
+.cache/
+.parcel-cache/
+
+# Logs
+logs
+*.log
+
+# Local development
+.vercel
+.next
+
+# Misc
+.cache
+.vercel
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
 .env.local
 .env.development.local
 .env.test.local
