--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,14 @@
 /build
 /dist
 
-# Misc
-.DS_Store
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -32,37 +31,20 @@ yarn-error.log*
 *.sln
 *.sw?
 
-# Environment variables
-.env
-
-# Build files
-build/
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Cache
 .cache/
-.parcel-cache/
 
-# Logs
-logs
-*.log
+# Debug logs
+npm-debug.log*
 
 # Local development
-.vercel
-.next
-
-# Misc
-.cache
-.vercel
-.DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.local
